--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -12,6 +12,7 @@
     height: 30vh;
     font-family: 'NeueMontreal-Regular';
     font-size: 1vw;
+    margin-top:5vw;
 }
 .footer .footer2 #techs {
     color: #f79bee;
